# Fire-Classification

./: .gitignore  pyproject.toml  setup.py
